@@ -1,7 +1,7 @@
-wShell=$(which bash)
+Shell=$(which bash)
 #!${Shell}
 
-SupportV="0.1.43"
+SupportV="0.1.47"
 Lang=C++
 
 ProgDir=$1
@@ -64,7 +64,6 @@ UseC++()
 {
 	local LangConfig=$(grep ${Lang} ${VarDir}/clide.conf | sed "s/${Lang}=//1")
 	local LangCpl=${LangConfig}
-
 	local LangHome=${ProgDir}/${Lang}
 	local LangSrc=${LangHome}/src
 	local LangBin=${LangHome}/bin
@@ -288,6 +287,19 @@ UseC++()
 			local project=${CodeProject}
 			local TheBinDir
 			local ERROR
+
+			#Handle multiple files
+			if [ -z "${name}" ]; then
+				if [[ "${src}" == *","* ]]; then
+					src=$(echo ${src} | tr ',' ' ')
+					name=$(grep -l "int main(" ${src} 2> /dev/null)
+					name=${name%.*}
+				else
+					name=${src%.*}
+				fi
+				cplArgs=$2
+			fi
+
 			#Handle Project Dir
 			case ${project} in
 				none)
@@ -299,43 +311,30 @@ UseC++()
 					TheBinDir="${LangSrc}/${project}bin"
 					;;
 			esac
+
+			#Compile ONLY if source code is selected OR makefile is present
 			if [[ "$src" == *"${LangExt}"* ]] || [ -f ${LangSrc}/${project}makefile ]; then
 				cplArgs=${LangCplVersion}
+				#Compile with makefile
 				if [ -f ${LangSrc}/${project}makefile ]; then
 					cd ${LangSrc}/${project}
 					echo "make"
 					cd - > /dev/null
 					echo -e "\e[1;44m[${Lang} Code Compiled]\e[0m"
+				#Compile without makefile
 				else
-					#Multiple code selected
-					if [[ "${src}" == *","* ]]; then
-						#num is empty
-						if [ -z ${name} ]; then
-							errorCode "cpl" "choose"
-						else
-							#Separate list of selected code
-							prog=$(echo ${src} | sed "s/,/ /g")
-							#Compile for Threads
-							NeedThreads=$(grep "#include <thread>" ${prog})
-							if [ ! -z "${NeedThreads}" ]; then
-								cplArgs="${cplArgs} -lpthread"
-							fi
-							ERROR=$(${LangCpl} ${prog} -o ${TheBinDir}/${name} ${cplArgs} 2>&1 | tr '\n' '|')
-							if [ -z "${ERROR}" ]; then
-								echo -e "\e[1;44m[${Lang} Code Compiled]\e[0m"
-							else
-								errorCode "cpl" "ERROR" "${ERROR}"
-							fi
-						fi
-					#single code selected
+					#source file is empty
+					if [ -z ${name} ]; then
+						errorCode "cpl" "choose"
 					else
-						#Compile for threading
+						#Compile for Threads
 						NeedThreads=$(grep "#include <thread>" ${src})
 						if [ ! -z "${NeedThreads}" ]; then
 							cplArgs="${cplArgs} -lpthread"
 						fi
-						#Compile and move C++ to Binary dir
-						ERROR=$(${LangCpl} ${src} -o ${TheBinDir}/${src%.*} ${cplArgs} 2>&1 | tr '\n' '|')
+						#Compile and check for errors
+						ERROR=$(${LangCpl} ${src} -o ${TheBinDir}/${name} ${cplArgs} 2>&1 | tr '\n' '|')
+						#Code compiled successfully
 						if [ -z "${ERROR}" ]; then
 							echo -e "\e[1;44m[${Lang} Code Compiled]\e[0m"
 						else
@@ -625,25 +624,49 @@ UseC++()
 			TheName=$(OtherColor "${TheName%.*}")
 			echo "./${TheName}"
 			;;
+		#Run the compiled code
 		runCode)
 			local name=$1
+			#Handle Extension
+			case ${name} in
+				*${LangExt})
+					;;
+				*)
+					name="${name}${LangExt}"
+					;;
+			esac
+
 			shift
 			shift
 			local Args=$@
 			local TheBin="${name%.*}"
 			local project=${CodeProject}
 			local TheBinDir
+
 			#Handle Project Dir
 			case ${project} in
 				none)
 					project=""
 					TheBinDir=${LangBin}
+					cd ${LangSrc}/
 					;;
 				*)
-					project="${project}/"
-					TheBinDir="${LangSrc}/${project}bin"
+					TheBinDir="${LangSrc}/${project}/bin"
+					cd ${LangSrc}/${project}/src
 					;;
 			esac
+
+			#Handle multiple src files
+			if [[ "${name}" == *","* ]]; then
+				#Find the main file
+				if [ ! -z "${name}" ]; then
+					name=$(echo ${name} | tr ',' ' ')
+					name=$(grep -l "int main(" ${name} 2> /dev/null)
+					TheBin="${name%.*}"
+				fi
+			fi
+
+			#Find Executable
 			if [ -f ${TheBinDir}/${TheBin} ]; then
 				${TheBinDir}/${TheBin} ${Args[@]}
 			else
@@ -653,9 +676,12 @@ UseC++()
 		backup)
 			local name=$1
 			if [ ! -z "${name}" ]; then
+				#Backup file does NOT exist
 				if [ ! -f "${LangSrc}/${name}.bak" ]; then
+					#Make backup
 					cp ${LangSrc}/${name} ${LangSrc}/${name}.bak
 					echo "\"${name}\" backed-up"
+				#Backup file exists
 				else
 					errorCode "backup" "exists"
 				fi
@@ -666,9 +692,12 @@ UseC++()
 		restore)
 			local name=$1
 			if [ ! -z "${name}" ]; then
+				#Backup file exists
 				if [ -f "${LangSrc}/${name}.bak" ]; then
+					#Restore from backup
 					mv ${LangSrc}/${name}.bak ${LangSrc}/${name}
 					echo "\"${name}\" restored"
+				#Backup file does NOT exist
 				else
 					errorCode "restore" "exists"
 				fi
@@ -700,5 +729,5 @@ UseC++()
 			;;
 	esac
 }
-
+#init
 UseC++ $@
