@@ -1,1 +1,1 @@
-Go;MyTest;test.go
+none;Java;Cat.java,Dog.java,Inheritance.java
