@@ -8,6 +8,7 @@ Added:
 	Provided better support for Java Projects (Lang.Java)
 	project mode addition is in progress (ie main vs test)
 	begun adding project type support (project/Template/<Lang>.<type>)
+	listing compiled code ($ clide --list-cpl <language>)
 
 Concept:
 	Managing different project types
